--- a/main.html
+++ b/main.html
@@ -8,10 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
 	<main class="Accio" id="job">
+		<div>
 		<p class="hello-accio-job">Hello Accio Job</p> 
-
+      </div>
 	</main>
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
