--- a/main.html
+++ b/main.html
@@ -5,6 +5,18 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
+<style>
+	main{
+    height: 150px;
+    width: 150px;
+    background-color: black;
+}
+p{
+    color: white;
+    margin-left: 32px;
+    padding: 10px;
+}
+</style>
 
 <body>
 	<!-- the entire body must be written by student -->
